[package]
name = "kociemba-http"
license = "GPL-3.0-or-later"
readme = "README.md"
description = "A http wrapper for the kociemba crate"
repository = "https://github.com/shaggysa/kociemba-http"
version = "0.1.1"
edition = "2024"

[dependencies]
axum = "0.8.8"
kociemba = "0.5.3"
tokio = { version = "1.49.0", features = ["full"] }
bincode = "=2.0.0-rc.3"
tower = { version = "0.5.3", features = ["util"] }
http-body-util = "0.1.3"
dotenvy = "0.15.7"
